# Library-REST-API-server

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2026-02-10-122459-0000_create_library_schema/: down.sql  up.sql
src/: config.rs  errors.rs  lib.rs  main.rs  routes.rs  schema.rs
src/db/: pool.rs
src/handlers/: books.rs  loans.rs  mod.rs  users.rs
src/models/: book.rs  loan.rs  mod.rs  user.rs
src/services/: book_service.rs  loan_service.rs  mod.rs  user_service.rs
