[package]
name = "library-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

diesel = { version = "2.1", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.7.4", features = ["postgres", "deadpool"] }
deadpool = "0.12.3"

uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json"] }